// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositDateField Platform specific rendering date picker matches snapshot on Android 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value="01/01/2024"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`DepositDateField Platform specific rendering date picker matches snapshot on iOS 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value="01/01/2024"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value="01/01/2024"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot with a value 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value="01/02/2024"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot with an error 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value="01/01/2024"
        />
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#ca3542",
          "fontFamily": "Geist Regular",
          "fontSize": 12,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginTop": 4,
        }
      }
    >
      Invalid date format
    </Text>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot with empty value 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "column",
          "marginBottom": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginBottom": 6,
        }
      }
      testID="label"
    >
      Date of Birth
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#b7bbc8",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
      testID="textfield"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
        testID="textfield-startacccessory"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Calendar"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <TextInput
          autoFocus={false}
          editable={true}
          keyboardAppearance="light"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          readOnly={true}
          style={
            {
              "backgroundColor": "inherit",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#121314",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 46,
              "letterSpacing": 0,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;
